--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "deploy": "wrangler publish --minify src/index.ts"
   },
   "dependencies": {
+    "@planetscale/database": "^1.7.0",
+    "@prisma/client": "^4.12.0",
     "hono": "^3.1.5"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
+    "prisma": "^4.12.0",
     "wrangler": "^2.7.1"
   }
 }
